# paifu-playground

./: .gitignore  4ma_gin_han_sample.json  Makefile  PaifuType.py  PaifuTypeInternal.py  PaifuTypeInternalPydantic.py  PaifuTypesPydantic.py  PaifuTypesPydanticWithInternal.py  activityEXTeamDailyAwardAwardRes_duplicated.json  activity_activity_list.json  activity_ex_team_task.json  activity_read_ranks_3ma.json  activity_read_ranks_4ma.json  activity_receive_sign_award.json  activity_user_sign_progress.json  activity_view_action.json  backpack_recycle_gift.json  backpack_recycle_gift_err_code_2.json  backpack_user_item_list.json  collectTest.json  collect_pai_pu.json  data.md  emailLoginRes.json  eventdata.json  fetch_domain_name.json  gameDataSample.json  getDahaiSpeedFromDynamoDB.py  get_activity_collect_task_award.json  get_activity_ex_team_daily_award.json  get_gift_code.json  get_gift_code_redeem_timeout.json  get_gift_code_unknown_code.json  get_latest_version.json  get_message_user_message.json  get_product_list.json  get_store_buy_product.json  get_user.py  get_user_base_data.json  get_user_brief.json  get_user_detail_stats_v2_info.json  (+47 more)
code-rabbit-test/: a_a_A_kebbabCase.go  bug.go  bug.py  bug.ts
login-majsoul-jp-npm/: README.md  bun.lockb  global.d.ts  index.ts  package.json
login-riichicity-npm/: README.md  bun.lockb  package.json
paifuya_utils/: util.py
protoc-study/: helloworld.proto  helloworld_pb2.py  readme.md  study-from-pb2.py
riichicity/: accounts.py  base.py  gameDataSample.json  get-record-from-player.py  get-record-from-player2.py  getMessageTest.py  randteest.py  (+5 more)
riichicity-gacha-efficiency/: main.py
(+42 files in other folders)
