[tool.poetry]
name = "paifu-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "paifu_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
matplotlib = "^3.8.1"
tqdm = "^4.66.1"
japanize-matplotlib = "^1.1.3"
discord-py = "^2.3.2"
protobuf = "^4.25.1"
python-dotenv = "^1.0.0"
pydantic = "^2.6.4"
boto3 = "^1.34.63"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
