[tool.poetry]
name = "paifu-playground"
version = "0.1.0"
description = "paifu_playground"
authors = ["0num4 <r.oonuma@matsuri-tech.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "paifuya_utils", from = "."},
    {include = "riichirity_emulate", from = "."},
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
matplotlib = "^3.8.1"
tqdm = "^4.66.1"
japanize-matplotlib = "^1.1.3"
discord-py = "^2.3.2"
protobuf = "^4.25.1"
python-dotenv = "^1.0.0"
boto3 = "^1.34.63"
pytz = "^2024.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
pandas = "^2.2.2"
streamlit = "^1.35.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.4.1"
flake8 = "^7.0.0"
pytest = "^8.2.2"


[tool.poetry.group.riichi-emu.dependencies]
pandas = "^2.2.2"


[tool.poetry.group.types.dependencies]
types-protobuf = "^5.26.0.20240422"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"